--- a/Project_2_VQE_Molecules/S3_Unitary_Ansatz.ipynb
+++ b/Project_2_VQE_Molecules/S3_Unitary_Ansatz.ipynb
@@ -1110,8 +1110,7 @@
    "execution_count": 40,
    "outputs": [],
    "source": [
-    "np.save('../../week2_data/week2_n2.npy', (n2results, lengths))\n",
-    "h = ham.to_openfermion()"
+    "np.save('../../week2_data/week2_n2.npy', (n2results, lengths))"
    ],
    "metadata": {
     "collapsed": false,
