still computing Hamiltonians, clarifying sections on docs, and moving S2 calcs to complete molecule docs

--- a/Project_2_VQE_Molecules/LiH_complete.ipynb
+++ b/Project_2_VQE_Molecules/LiH_complete.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generating the circuit for LiH\n",
+    "# LiH Molecule: Constructing Potential Energy Surfaces Using VQE\n",
     "\n",
-    "## Classical calculations:"
+    "## Step 1: Classical calculations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,13 @@
     "threshold = 1e-6 #Cutoff for UCC MP2 amplitudes and QCC ranking gradients\n",
     "\n",
     "basis = 'sto-3g'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classical Electronic Structure Methods"
    ]
   },
   {
@@ -136,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating Qubit Hamiltonians"
+    "## Step 2: Generating Qubit Hamiltonians"
    ]
   },
   {
@@ -794,7 +801,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lih_tapered = taper_hamiltonian(lih, n_spin_orbitals=12, n_electrons=4, qubit_transf=qubit_transf)"
+    "lih_tapered = taper_hamiltonian(lih, n_spin_orbitals=12, n_electrons=4, qubit_transf=qubit_transf)\n",
+    "print(\"Effective Hamiltonian:\", lih_tapered)"
    ]
   },
   {
@@ -838,23 +846,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Hamiltonian has 631 terms\n",
-      "\n",
-      "\n",
-      "Number of UCCSD amplitudes: 24 \n",
-      "\n",
-      "\n",
-      "Starting optimization:\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "H = lih_tq.make_hamiltonian()\n",
     "\n",
