--- a/Project_2_VQE_Molecules/S2_Hamiltonian_Group-4.ipynb
+++ b/Project_2_VQE_Molecules/S2_Hamiltonian_Group-4.ipynb
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -2479,10 +2479,9 @@
      "text": [
       "The ground state energy for H4:\n",
       "E = -1.9151065497485846 Eh\n",
-      "Could not converge\n",
       "\n",
       "The eigenvalues in the effective Hamiltonian for H4: \n",
-      " [-1.10115031  0.03904763]\n"
+      " [-3.87964953 -3.6797345 ]\n"
      ]
     }
    ],
@@ -2494,7 +2493,7 @@
     "\n",
     "# Building the matrix representation of the effective Hamiltonian\n",
     "I, X, Z = np.identity(2), np.array([[0, 1], [1, 0]]), np.array([[1, 0], [0, -1]])\n",
-    "h4_matrix = -3.779692011781925 * I + 0.040696065058761485  * X -0.09129805749471391 * Z\n",
+    "h4_matrix = -3.779692011781925 * I + 0.040696065058761485  * X - 0.09129805749471391 * Z\n",
     "\n",
     "\n",
     "# Obtain the eigenvalues\n",
