finished eigenvalue calculation

--- a/Project_2_VQE_Molecules/H4_complete.ipynb
+++ b/Project_2_VQE_Molecules/H4_complete.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -566,6 +566,35 @@
       "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817057306906, (3, 0, 3, 0): -0.12723601930371584, (2, 0, 3, 1): 0.3144232256576289, (2, 1, 2, 1): -0.6718295922348854, (3, 1, 3, 1): -0.046802668557642015, (3, 0, 2, 1): 0.0018275528564010613, (2, 0, 2, 0): -0.04619780017810169, (2, 1, 3, 0): -0.33763509096731426}  samples= None\n",
       "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817057307415, (3, 0, 3, 0): -0.1272360193037156, (2, 0, 3, 1): 0.31442322565768116, (2, 1, 2, 1): -0.6718295922348849, (3, 1, 3, 1): -0.04680266855764214, (3, 0, 2, 1): 0.0018275528564369412, (2, 0, 2, 0): -0.046197800178102245, (2, 1, 3, 0): -0.33763509096735406}  samples= None\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817057306906, (3, 0, 3, 0): -0.12723601930371584, (2, 0, 3, 1): 0.3144232256576289, (2, 1, 2, 1): -0.6718295922348854, (3, 1, 3, 1): -0.046802668557642015, (3, 0, 2, 1): 0.0018275528564010613, (2, 0, 2, 0): -0.04619780017810169, (2, 1, 3, 0): -0.33763509096731426}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817057307161, (3, 0, 3, 0): -0.12723601930371572, (2, 0, 3, 1): 0.31442322565765507, (2, 1, 2, 1): -0.6718295922348851, (3, 1, 3, 1): -0.04680266855764208, (3, 0, 2, 1): 0.0018275528564190011, (2, 0, 2, 0): -0.04619780017810197, (2, 1, 3, 0): -0.33763509096733413}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817057306906, (3, 0, 3, 0): -0.12723601930371584, (2, 0, 3, 1): 0.3144232256576289, (2, 1, 2, 1): -0.6718295922348854, (3, 1, 3, 1): -0.046802668557642015, (3, 0, 2, 1): 0.0018275528564010613, (2, 0, 2, 0): -0.04619780017810169, (2, 1, 3, 0): -0.33763509096731426}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817057307033, (3, 0, 3, 0): -0.12723601930371578, (2, 0, 3, 1): 0.31442322565764197, (2, 1, 2, 1): -0.6718295922348853, (3, 1, 3, 1): -0.04680266855764204, (3, 0, 2, 1): 0.0018275528564100313, (2, 0, 2, 0): -0.04619780017810183, (2, 1, 3, 0): -0.3376350909673242}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044051071164449, (3, 0, 3, 0): -0.12723589852731568, (2, 0, 3, 1): 0.31444721572733225, (2, 1, 2, 1): -0.6718293702859662, (3, 1, 3, 1): -0.04680272781134879, (3, 0, 2, 1): 0.0018440275277966916, (2, 0, 2, 0): -0.04619805687511723, (2, 1, 3, 0): -0.33765336494938153}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043934060581216, (3, 0, 3, 0): -0.12723595891740186, (2, 0, 3, 1): 0.31443522031784127, (2, 1, 2, 1): -0.6718294812638919, (3, 1, 3, 1): -0.04680269818357007, (3, 0, 2, 1): 0.0018357899348232735, (2, 0, 2, 0): -0.04619792852260077, (2, 1, 3, 0): -0.3376442276729735}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043875555289599, (3, 0, 3, 0): -0.12723598911244494, (2, 0, 3, 1): 0.31442922261309575, (2, 1, 2, 1): -0.6718295367528546, (3, 1, 3, 1): -0.04680268336968071, (3, 0, 2, 1): 0.0018316711383365646, (2, 0, 2, 0): -0.046197864346342536, (2, 1, 3, 0): -0.33763965903476945}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.804384630264379, (3, 0, 3, 0): -0.1272360042099665, (2, 0, 3, 1): 0.31442622376072304, (2, 1, 2, 1): -0.6718295644973361, (3, 1, 3, 1): -0.04680267596273603, (3, 0, 2, 1): 0.00182961174009321, (2, 0, 2, 0): -0.046197832258213424, (2, 1, 3, 0): -0.33763737471566746}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043831676320886, (3, 0, 3, 0): -0.12723601175872726, (2, 0, 3, 1): 0.31442472433453666, (2, 1, 2, 1): -0.6718295783695768, (3, 1, 3, 1): -0.04680267225926369, (3, 0, 2, 1): 0.0018285820409715328, (2, 0, 2, 0): -0.04619781621414886, (2, 1, 3, 0): -0.3376362325561164}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043824363159434, (3, 0, 3, 0): -0.12723601553310765, (2, 0, 3, 1): 0.31442397462144345, (2, 1, 2, 1): -0.6718295853056971, (3, 1, 3, 1): -0.046802670407527516, (3, 0, 2, 1): 0.0018280671914106942, (2, 0, 2, 0): -0.046197808192116586, (2, 1, 3, 0): -0.33763566147634094}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043820706578708, (3, 0, 3, 0): -0.12723601742029786, (2, 0, 3, 1): 0.31442359976489687, (2, 1, 2, 1): -0.6718295887737573, (3, 1, 3, 1): -0.04680266948165943, (3, 0, 2, 1): 0.0018278097666302748, (2, 0, 2, 0): -0.04619780418110044, (2, 1, 3, 0): -0.33763537593645315}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043818878288346, (3, 0, 3, 0): -0.12723601836389295, (2, 0, 3, 1): 0.3144234123366236, (2, 1, 2, 1): -0.6718295905077873, (3, 1, 3, 1): -0.046802669018725394, (3, 0, 2, 1): 0.0018276810542400652, (2, 0, 2, 0): -0.04619780217559238, (2, 1, 3, 0): -0.3376352331665093}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817964143164, (3, 0, 3, 0): -0.1272360188356905, (2, 0, 3, 1): 0.31442331862248696, (2, 1, 2, 1): -0.6718295913748025, (3, 1, 3, 1): -0.04680266878725837, (3, 0, 2, 1): 0.0018276166980449604, (2, 0, 2, 0): -0.04619780117283834, (2, 1, 3, 0): -0.33763516178153735}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817507070573, (3, 0, 3, 0): -0.12723601907158927, (2, 0, 3, 1): 0.3144232717654186, (2, 1, 2, 1): -0.6718295918083099, (3, 1, 3, 1): -0.04680266867152486, (3, 0, 2, 1): 0.001827584519947408, (2, 0, 2, 0): -0.04619780067146132, (2, 1, 3, 0): -0.3376351260890514}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817278534278, (3, 0, 3, 0): -0.12723601918953864, (2, 0, 3, 1): 0.31442324833688445, (2, 1, 2, 1): -0.6718295920250638, (3, 1, 3, 1): -0.0468026686136581, (3, 0, 2, 1): 0.0018275684308986318, (2, 0, 2, 0): -0.04619780042077282, (2, 1, 3, 0): -0.3376351082428084}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8043817164266129, (3, 0, 3, 0): -0.12723601924851335, (2, 0, 3, 1): 0.31442323662261734, (2, 1, 2, 1): -0.6718295921334406, (3, 1, 3, 1): -0.046802668584724726, (3, 0, 2, 1): 0.0018275603863742438, (2, 0, 2, 0): -0.04619780029542856, (2, 1, 3, 0): -0.33763509931968694}  samples= None\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: -1.951566\n",
+      "         Iterations: 41\n",
+      "         Function evaluations: 197\n",
+      "         Gradient evaluations: 181\n",
+      "\n",
+      "Obtained UCCSD energy: -1.951565851497312\n"
+     ]
     }
    ],
    "source": [
@@ -588,9 +617,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hf_reference' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-cb71a2f67c53>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m ranked_entangler_groupings = generate_QCC_gradient_groupings(H.to_openfermion(), \n\u001b[1;32m      6\u001b[0m                                                              \u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mh4_tq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_orbitals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                                                              \u001b[0mhf_reference\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m                                                              cutoff=threshold)\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hf_reference' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Define number of entanglers to enter ansatz\n",
     "n_ents = 1\n",
@@ -615,9 +656,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'entanglers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-fb9cac137301>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"tau_0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mU\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconstruct_QMF_ansatz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0ment\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mentanglers\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mU\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mExpPauli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaulistring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPauliString\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ment\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mangle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'entanglers' is not defined"
+     ]
+    }
+   ],
    "source": [
     "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h4', 2, 'sto-3g', qubit_transf='jw'))\n",
     "\n",
