--- a/Project_2_VQE_Molecules/LiH_complete.ipynb
+++ b/Project_2_VQE_Molecules/LiH_complete.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -839,14 +839,32 @@
     "\n",
     "E_FCI = lih_tq.compute_energy(method='fci')\n",
     "\n",
-    "print('FCI energy: {}'.format(E_FCI))"
+    "print('FCI energy: {}'.format(E_FCI))\n",
+    "\n",
+    "hf_reference = hf_occ(2*lih_tq.n_orbitals, lih_tq.n_electrons)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hamiltonian has 631 terms\n",
+      "\n",
+      "\n",
+      "Number of UCCSD amplitudes: 24 \n",
+      "\n",
+      "\n",
+      "Starting optimization:\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "H = lih_tq.make_hamiltonian()\n",
     "\n",
@@ -876,7 +894,7 @@
     "\n",
     "#Rank entanglers using energy gradient criterion\n",
     "ranked_entangler_groupings = generate_QCC_gradient_groupings(H.to_openfermion(), \n",
-    "                                                             2*lih.n_orbitals, \n",
+    "                                                             2*lih_tq.n_orbitals, \n",
     "                                                             hf_reference, \n",
     "                                                             cutoff=threshold)\n",
     "\n",
