--- a/datasets/qubit_molecules/BeH2/berillium_reconstruction.ipynb
+++ b/datasets/qubit_molecules/BeH2/berillium_reconstruction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +113,8 @@
     "    Output   hamiltonian: np.array, shape = [2**N,2**N]\n",
     "    \"\"\"\n",
     "    N = len(pauli_list[0])\n",
+    "    print(\"Print N\")\n",
+    "    print(N)\n",
     "    hamiltonian = np.zeros((1<<N,1<<N),dtype=complex)\n",
     "    for i,pauli in enumerate(pauli_list):\n",
     "        hamiltonian += interactions[i]*operatorfromstring(pauli)\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -159,39 +161,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Print N\n",
+      "6\n",
       "Ground state energy: -19.0387950494\n",
       "\n",
       "Ground state wavefunction:\n",
       "\n",
-      " [ 0.00000000e+00+0.j -6.47852018e-29+0.j -8.02672576e-28+0.j\n",
-      "  5.42296813e-16+0.j  1.07582190e-28+0.j -1.37780097e-16+0.j\n",
-      "  1.03208053e-16+0.j  1.49663083e-28+0.j -4.55082528e-16+0.j\n",
-      " -8.71311245e-03+0.j -1.62174211e-03+0.j -3.26281516e-16+0.j\n",
-      "  5.64321033e-03+0.j  2.22414554e-17+0.j -2.22038102e-16+0.j\n",
-      " -1.87897356e-03+0.j  8.57222821e-16+0.j -1.62174211e-03+0.j\n",
-      "  6.18030936e-02+0.j -3.57279738e-16+0.j  2.66801733e-03+0.j\n",
-      "  1.56648199e-17+0.j -9.94474300e-17+0.j -4.75449726e-02+0.j\n",
-      " -3.79470760e-19+0.j  1.77788017e-16+0.j -1.55986546e-16+0.j\n",
-      "  2.79809215e-02+0.j -1.44125987e-15+0.j  7.19978005e-21+0.j\n",
-      " -4.19017623e-02+0.j  2.90617249e-17+0.j  5.19755245e-17+0.j\n",
-      "  5.64321033e-03+0.j  2.66801733e-03+0.j  1.25630230e-15+0.j\n",
-      " -9.89989331e-01+0.j -4.70387295e-19+0.j -1.32105193e-15+0.j\n",
-      "  3.19908661e-03+0.j  1.37780097e-16+0.j -6.90890812e-18+0.j\n",
-      " -1.88746515e-17+0.j -4.95973280e-18+0.j -7.26961993e-19+0.j\n",
-      " -1.91901657e-31+0.j -4.41831156e-19+0.j  3.90108547e-18+0.j\n",
-      "  1.37511293e-20+0.j -1.79396098e-17+0.j  1.02367076e-15+0.j\n",
-      " -4.19017623e-02+0.j  4.68754884e-15+0.j -2.40990326e-22+0.j\n",
-      "  7.44036686e-02+0.j -4.98868914e-17+0.j -1.91352426e-17+0.j\n",
-      " -1.87897356e-03+0.j -4.75449726e-02+0.j -2.03209348e-16+0.j\n",
-      "  3.19908661e-03+0.j -5.55336235e-18+0.j  1.15359111e-16+0.j\n",
-      "  3.95406695e-02+0.j]\n"
+      " [ 0.00000000e+00+0.j -2.36171617e-17+0.j -6.26372511e-17+0.j\n",
+      " -6.38532474e-16+0.j -7.64047030e-17+0.j  2.16086238e-18+0.j\n",
+      " -2.47577269e-16+0.j -2.15959777e-17+0.j -4.30290139e-16+0.j\n",
+      "  8.71311245e-03+0.j  1.62174211e-03+0.j  1.81557534e-16+0.j\n",
+      " -5.64321033e-03+0.j -3.81005384e-17+0.j -1.11022302e-16+0.j\n",
+      "  1.87897356e-03+0.j  4.44089210e-16+0.j  1.62174211e-03+0.j\n",
+      " -6.18030936e-02+0.j -2.77555756e-17+0.j -2.66801733e-03+0.j\n",
+      " -1.47451495e-17+0.j  1.86482774e-17+0.j  4.75449726e-02+0.j\n",
+      "  2.30392962e-19+0.j  2.13350659e-16+0.j -4.12098469e-17+0.j\n",
+      " -2.79809215e-02+0.j -7.67530435e-17+0.j  9.52912066e-22+0.j\n",
+      "  4.19017623e-02+0.j -6.97644393e-17+0.j  1.21370292e-17+0.j\n",
+      " -5.64321033e-03+0.j -2.66801733e-03+0.j  1.04652020e-16+0.j\n",
+      "  9.89989331e-01+0.j  2.73772077e-19+0.j -2.09893699e-16+0.j\n",
+      " -3.19908661e-03+0.j -2.99108559e-17+0.j  5.60115715e-17+0.j\n",
+      "  6.52066601e-18+0.j  1.80001527e-16+0.j  6.56542972e-19+0.j\n",
+      " -2.44323679e-17+0.j  2.43013748e-17+0.j -1.50724624e-17+0.j\n",
+      " -1.09511154e-20+0.j  2.61955219e-17+0.j  6.89340352e-18+0.j\n",
+      "  4.19017623e-02+0.j  3.82443690e-16+0.j -3.11566808e-23+0.j\n",
+      " -7.44036686e-02+0.j -3.73807163e-17+0.j -3.81008570e-17+0.j\n",
+      "  1.87897356e-03+0.j  4.75449726e-02+0.j -1.01768690e-16+0.j\n",
+      " -3.19908661e-03+0.j  7.44309125e-18+0.j  2.10501253e-18+0.j\n",
+      " -3.95406695e-02+0.j]\n"
      ]
     }
    ],
@@ -497,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
