clean unnecessary comments

--- a/Project_2_VQE_Molecules/S2_Hamiltonian_gen.ipynb
+++ b/Project_2_VQE_Molecules/S2_Hamiltonian_gen.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -221,28 +221,7 @@
     "# Obtain the eigenvalues\n",
     "eigvals, _ = np.linalg.eigh(h2_matrix)\n",
     "\n",
-    "print(\"\\nThe eigenvalues in the effective Hamiltonian: \\n {}\".format(eigvals))\n",
-    "\n",
-    "# Obtain the eigenvalues\n",
-    "#eigvals, _ = np.linalg.eigh(h2_matrix)\n",
-    "#print(\"\\nThe eigenvalues in the effective Hamiltonian: \\n {}\".format(eigvals))\n",
-    "\n",
-    "#print(hamiltonian.terms)\n",
-    "#len(list(hamiltonian.terms.keys())[1])\n",
-    "#max(len(x) for x in list(hamiltonian.terms.keys())) \n",
-    "\n",
-    "#list(hamiltonian.terms.keys())[9]\n",
-    "#print(hamiltonian.terms.get(()))\n",
-    "#print(pauli_list )\n",
-    "#print(operatorfromstring(pauli_list[2], max_orbitals))\n",
-    "#print(len(pauli_list[2]))\n",
-    "#eye_list = []\n",
-    "#eye_num = max_orbitals - len(pauli_list[2])\n",
-    "\n",
-    "#for e in range(eye_num):\n",
-    "  #  eye_list.append(I)\n",
-    "\n",
-    "#reduce(np.kron,eye_list)"
+    "print(\"\\nThe eigenvalues in the effective Hamiltonian: \\n {}\".format(eigvals))"
    ]
   },
   {
@@ -254,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1558,7 @@
     "# Obtain the eigenvalues\n",
     "eigvals, _ = np.linalg.eigh(lih_matrix)\n",
     "\n",
-    "print(\"\\nThe eigenvalues in the effective Hamiltonian: \\n {}\".format(eigvals))\n"
+    "print(\"\\nThe eigenvalues in the effective Hamiltonian: \\n {}\".format(eigvals))"
    ]
   },
   {
@@ -1591,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1817,15 +1796,8 @@
     "# Obtain the eigenvalues\n",
     "eigvals, _ = np.linalg.eigh(h4_matrix)\n",
     "\n",
-    "print(\"\\nThe eigenvalues in the effective Hamiltonian: \\n {}\".format(eigvals))\n"
+    "print(\"\\nThe eigenvalues in the effective Hamiltonian: \\n {}\".format(eigvals))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
