IBM Q circuit added. Images added

--- a/Project_2_VQE_Molecules/LiH_Excited_State.ipynb
+++ b/Project_2_VQE_Molecules/LiH_Excited_State.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Excited state calculation\n",
+    "# Excited state calculation LiH\n",
     "\n",
     "In order to obtain the excited state of the LiH molecule, we will use the VQE circuit to calculat the ground state wavefunction. We can define an effective Hamiltonian with the lowest eigenstate being the first excited state and  the lowest eigenvalue being the energy of this state. In other words, we can shift the ground state energy to the first excited state. We will vary parameters, and thus E<sup>0</sup>, to hit the minimum of the excited state:\n",
     "\n",
