--- a/Project_2_VQE_Molecules/S5_Circuits.ipynb
+++ b/Project_2_VQE_Molecules/S5_Circuits.ipynb
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.9486411121761621\n"
+      "-0.9486411121761622\n"
      ]
     }
    ],
@@ -98,10 +98,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "configrc.store_credentials:WARNING:2020-07-17 15:36:44,427: Credentials already present. Set overwrite=True to overwrite.\n"
+     ]
+    }
+   ],
    "source": [
-    "# from qiskit import IBMQ\n",
-    "# IBMQ.save_account('MY_API_TOKEN')"
+    "from qiskit import IBMQ\n",
+    "IBMQ.save_account('0a39191e2b6eb3bf1b66dc4ea27de3cae4710b77efc555275d18017d6f2380e69e6fe16697eb6011241e5cddf0d48e073c1bc01292d631c9ccb066092c380e1b')"
    ]
   },
   {
@@ -114,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.7276849297174877"
+       "-0.5837168431319493"
       ]
      },
      "execution_count": 5,
@@ -145,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌────────────────────┐┌─────────────────────┐   ┌───┐                   »\n",
+      "     ┌────────────────────┐┌─────────────────────┐   ┌───┐                   »\n",
       "q_0: ┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├───┤ H ├──────■────────────»\n",
       "     ├────────────────────┤├─────────────────────┤┌──┴───┴───┐┌─┴─┐          »\n",
       "q_1: ┤ RX(f((beta_1,))_2) ├┤ RZ(f((gamma_1,))_3) ├┤ RX(pi/2) ├┤ X ├──■───────»\n",
@@ -186,6 +194,13 @@
     "circ = tq.circuit.compiler.compile_exponential_pauli_gate(U)\n",
     "tq.draw(circ, backend=\"qiskit\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
