--- a/Project_2_VQE_Molecules/LiH_molecule.ipynb
+++ b/Project_2_VQE_Molecules/LiH_molecule.ipynb
@@ -1568,7 +1568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the LiH Hamiltonian is extremely large (631 Hamiltonian terms). We can minimaze it by seeting active space. For instance, we will initialize the LiH molecule with an active space containing the second A1 orbitals (meaning the first 0A1 orbital is frozen) and the B1 orbital."
+    "As we can see, the LiH Hamiltonian is extremely large (631 Hamiltonian terms). We can minimize it by seeking active space. For instance, we will initialize the LiH molecule with an active space containing the second A1 orbitals (meaning the first 0A1 orbital is frozen) and the B1 orbital."
    ]
   },
   {
@@ -1601,7 +1601,7 @@
    "metadata": {},
    "source": [
     "### Unitary Coupled Cluster\n",
-    "Now, as we have reduced the number of Hamiltonian Terms, we can run the optimixation process faster. Below is a sample VQE simulation using the UCCSD ansatz compiled for a single trotter step for LiH in minimal basis at 𝑅=1.6 (Angstrom)."
+    "Now, as we have reduced the number of Hamiltonian Terms, we can run the optimization process faster. Below is a sample of VQE simulation using the UCCSD ansatz compiled for a single trotter step for LiH in minimal basis at 𝑅=1.6 (Angstrom)."
    ]
   },
   {
