--- a/Project_2_VQE_Molecules/S5_Circuits_solution.ipynb
+++ b/Project_2_VQE_Molecules/S5_Circuits_solution.ipynb
@@ -5,10 +5,9 @@
    "metadata": {},
    "source": [
     "# Quantum Circuits\n",
-    "Quantum computers can only use a specific set of gates (universal gate set). Given the entanglers and their amplitudes found in Step 3, one can find corresponding representation of these operators in terms of elementary gates using the following procedure.\n",
     "\n",
-    "\n",
-    "We could not execute on IBM-Q device because of qubit size and `dedicated use` of melbourne at this time."
+    "- Calculation of energy on simulator / QPU using previously found QCC parameters>\n",
+    "- \\> 8 qubit machine is not available as of now because of dedicated use."
    ]
   },
   {
