Update further challenge

--- a/Project_2_VQE_Molecules/exited_states.ipynb
+++ b/Project_2_VQE_Molecules/exited_states.ipynb
@@ -41,8 +41,8 @@
     "\n",
     "\n",
     "### Here we show SSVQE result for H2\n",
-    "- There seems to be a stagnation point around -0.58 [eV] for 1st excited state. It is also shown in the [author's tutorial](https://dojo.qulacs.org/ja/latest/notebooks/6.3_subspace_search_VQE.html)\n",
-    "- We cannot exceed this point in this calculation"
+    "- There seems to be a stagnation point around -0.58 [eV] for 1st excited state. It is also shown in the graph in [author's tutorial](https://dojo.qulacs.org/ja/latest/notebooks/6.3_subspace_search_VQE.html).\n",
+    "- We could not exceed this point if we use UCCSD, instead we use the hardware efficient ansatz as used in [this paper](https://arxiv.org/abs/1704.05018)."
    ]
   },
   {
